added css, improved html

--- a/index.html
+++ b/index.html
@@ -8,23 +8,38 @@
     <title>Elzbieta's Weather App</title>
   </head>
   <body>
-    <header>
-      <form>
-        <input type="search" placeholder="Enter a city.." required />
-        <input type="submit" value="Search" />
-      </form>
-    </header>
-    <main>
-      <div>
-        <h1>Paris</h1>
-        <p>
-          Tuesday 14:49, scattered clouds
-          <br />
-          Humidity: 66%, Wind: 3.13km/h
-        </p>
-      </div>
-      <div>🌤️ 12°C</div>
-    </main>
+    <div class="weather-app">
+      <header>
+        <form class="search-form" id="search-form">
+          <input
+            type="search"
+            placeholder="Enter a city..."
+            required
+            class="search-form-input"
+            id="search-form-input"
+          />
+          <input type="submit" value="Search" class="search-form-button" />
+        </form>
+      </header>
+      <main>
+        <div class="weather-app-data">
+          <div>
+            <h1 class="weather-app-city" id="city">City</h1>
+            <p class="weather-app-details">
+              <span id="time"></span>, <span id="description"></span>
+              <br />
+              Humidity:
+              <span class="weather-app-numbers" id="humidity">66%</span>, Wind:
+              <span class="weather-app-numbers" id="wind">3.13 km/h</span>
+            </p>
+          </div>
+          <div class="temperature-container">
+            <div id="icon"></div>
+            <div class="weather-app-temperature" id="current-temperature"></div>
+            <div class="weather-app-unit">°C</div>
+          </div>
+        </div>
+      </main>
 
     <footer>
         This project was coded by
