--- a/index.html
+++ b/index.html
@@ -19,12 +19,12 @@
         <form class="search-form" id="search-form">
           <input
             type="search"
-            placeholder="Enter a city..."
+            placeholder="Enter a city.."
             required
-            class="search-form-input"
             id="search-form-input"
+            class="search-form-input"
           />
-          <input type="submit" value="Search" class="search-form-button" />
+          <input type="submit" value="Search" class="search-form-btn" />
         </form>
       </header>
       <main>
@@ -32,22 +32,23 @@
           <div>
             <h1 class="weather-app-city" id="city"></h1>
             <p class="weather-app-details">
-              <span id="time"></span>, <span id="description"></span>
+              <span id="time"></span>,
+              <span id="description"></span>
               <br />
-              Humidity:
-              <span class="weather-app-numbers" id="humidity">66%</span>, Wind:
-              <span class="weather-app-numbers" id="wind">3.13 km/h</span>
+              Humidity: <strong id="humidity"></strong>, Wind:
+              <strong id="wind-speed"></strong>
             </p>
           </div>
-          <div class="temperature-container">
+          <div class="weather-app-temperature-container">
             <div id="icon"></div>
-            <div class="weather-app-temperature" id="current-temperature"></div>
+            <div class="weather-app-temperature" id="temperature"></div>
             <div class="weather-app-unit">°C</div>
           </div>
         </div>
+        <div class="weather-forecast" id="forecast"></div>
       </main>
 
-    <footer>
+      <footer>
         This project was coded by
         <a href="https://github.com/Padaras" target="_blank"
           >Elzbieta Cekanauske</a
